# postgres_mcp

./: README.md  pyproject.toml
src/postgres_mcp/: __init__.py  __main__.py  connection_manager.py  models.py  pg_queries.py  query_executor.py  server.py  sql_utils.py
